3.7.0-beta1 - ???

3.6.13 - 24 February 2023

* 12042: Fix bug when copying Decks and At-Start Stacks to other maps
* 12037: Fix concurrent modification exception in Decks
* 12016: Fix a possible crash scenario in At-Start Stacks
* 11995: ActionButtons with reports shouldn't display them if report is empty
* 11967: When dragging piece out of face-down deck, use unrotated shape
* 11897: Ensure that deleted extensions don't crash the Module Manager
* 11693: Prevent NPE when copying folders containing Mouse-over Stack Viewers
* 11451: Don't permit drag-and-drop within PlaceMarker, Replace with Other
    selection dialogs
* 11173: Fixed crash in sorting a deck
* 10877: Added a 'player joined' message when playing online
*  9786: Text Label traits will respond to GameRefresher (unless trait has a
    manually-change-label hotkey defined)

3.6.12 - 16 February 2023

* 12013: Reinstate removal of module tile cache when a module is removed from
    the Module Manager
* 12007: Update Apple Silicon terminology in preferences and docs
* 11994: Deck "send-when-empty" hotkeys no longer create extra undo steps
* 11993: ActionButtons set to count 0 times don't spuriously execute 1 time
* 11986: Add missing Section size symbol to NATO markers
* 11982: Fixed multiplayer problems with detach option on Deselect trait
* 11963: SendToLocation, Can Rotate, and MoveFixedDistance were all unlinking
    from deck/stack at wrong time, causing buggy behavior in some instances
    especially involving decks
* 11961: Clear up mark-when-moved problems for modules which still had a
    legacy value set
* 11957: Spaces in GKC reports made consistent with all other reports
* 11935: Allow option for only first Mouseover-stack Viewer that generates a
    tooltip will be drawn
* 11884: 'OldMat' properties now set correctly regardless of order of Mat
    Cargo and Send-to-Location (etc.) traits
* 11880: Triggers set to count 0 times don't spuriously execute 1 time