@@ -1,5 +1,7 @@
 3.7.0-beta1 - ???
 
+* 11178: Omit empty lines in non-blank property setting prompts
+
 3.6.13 - 24 February 2023
 
 * 12042: Fix bug when copying Decks and At-Start Stacks to other maps
